fix: incorrect display, overflowing of app wrapper, possibility to select any request by Menu component when isTableDataLoading flag is true

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -14,6 +14,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
+    overflow: visible !important;
 }
 
 .ant-table-wrapper .ant-table .ant-table-container .ant-table-body {
@@ -41,7 +42,7 @@
 }
 
 .ant-spin {
-    min-height: 100%;
+    min-height: calc(100vh - 48px);
 }
 
 .ant-table-row {
